--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ header  {
     display: flex;
     width: 100%;
     height: 100vh;
-    background-image: url("/img/hojasFondo.jpg");
+    background-image: url("img/hojasFondo.jpg");
     background-size: cover;
     background-position: center;
 
